0.4.3:
Sam Lantinga - Wed Feb 21 16:24:46 PST 2001
 * SDL 1.2.0 supports 24 bpp displays, allow that in plaympeg
Sam Lantinga - Fri Feb  9 23:37:31 PST 2001
 * Ported to MacOS X - one line fix.  I love portable code! :)
   It's still unusably slow, but it works! :)
Sam Lantinga - Thu Feb  8 17:33:15 PST 2001
 * Fixed a hang playing invalid MPEG files
Matt Carlson - Fri Feb  2 18:13:08 PST 2001
 * Fixed memory leak when used with OpenAL
Sam Lantinga - Mon Jan  8 07:49:20 PST 2001
 * Return a non-zero status from plaympeg if playback fails
James Boucher - Mon Jan  8 06:53:31 PST 2001
 * Changes to compile correctly on QNX RTP
Sam Lantinga - Thu Dec 21 10:52:28 PST 2000
 * Fixed SMPEG_renderFinal() to a different display surface
Stephane Peter - Thu, 21 Dec 2000 02:07:07 -0800 (PST)
 * Fixed plaympeg fullscreen toggling for multiple videos
Vivien Chappelier - Thu Dec 14 16:21:32 PST 2000
 * Fixed MPEGSystem::TotalTime() hanging on small files
 * Fixed system header decoding (caused misdetection of system streams)
 * Added bilinear filter toggling with the 'f' key in plaympeg
Maxim Sobolev - Mon Dec 11 11:54:46 PST 2000
 * Use the correct SDL configuration script on FreeBSD

0.4.2:
Sam Lantinga - Thu Dec  7 18:14:14 PST 2000
 * Check for the GLU library when seeing if we can build the OpenGL example
Mo DeJong - Mon Dec  4 12:26:18 PST 2000
 * Fixed crash when loading files of zero bytes
Sam Lantinga - Sat Dec  2 13:51:21 PST 2000
 * Added --enable-threaded-system configure option (defaults off)
Sam Lantinga - Sat Dec  2 13:40:33 PST 2000
 * Fixed end of stream detection
Sam Lantinga - Sat Dec  2 11:36:50 PST 2000
 * Fixed crashes in gtv when trying to play MP3 files with no video
Sam Lantinga - Fri Dec  1 20:39:39 PST 2000
 * Disabled the system thread by default.
   You can re-enable it by looking for USE_SYSTEM_THREAD in MPEGsystem.cpp
Sam Lantinga - Fri Dec  1 18:07:50 PST 2000
 * Fixed RenderFinal() to a different surface than the original one